--- a/app/src/main/res/layout/activity_unitmembers.xml
+++ b/app/src/main/res/layout/activity_unitmembers.xml
@@ -8,27 +8,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="top"/>
+        android:gravity="top">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ward number"
+        android:textColor="#000000"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="60dp"/>
 
     <Spinner
         android:layout_height="40dp"
         android:layout_width="290dp"
         android:background="@drawable/textbox"
         android:id="@+id/mward2"
-        android:layout_marginTop="50dp"
         android:layout_marginLeft="60dp"
         android:entries="@array/war"/>
 
-    <Spinner
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unit number"
+            android:textColor="#000000"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="60dp"/>
+
+
+        <Spinner
         android:layout_height="40dp"
         android:layout_width="290dp"
         android:id="@+id/munit2"
         android:entries="@array/war"
-        android:layout_marginTop="30dp"
         android:background="@drawable/textbox"
         android:layout_marginLeft="60dp"/>
-
+    </LinearLayout>
 
 
     <Button
